# vllm-client

./: .gitignore  Cargo.toml  README.md  plan.md
.claude/: settings.local.json
.github/workflows/: deploy-docs.yml
docs/: book.toml
docs/landing/: index.html
docs/landing/zh/: index.html
docs/src/: README.md  SUMMARY.md  advanced.md  api.md  changelog.md  contributing.md  examples.md  getting-started.md
docs/src/advanced/: custom-headers.md  thinking-mode.md  timeouts.md
docs/src/api/: chat-completions.md  client.md  error-handling.md  streaming.md  tool-calling.md
docs/src/examples/: basic-chat.md  multimodal.md  streaming-chat.md  streaming-completions.md  tool-calling.md
docs/src/getting-started/: configuration.md  installation.md  quick-start.md
docs/theme/: custom.css  custom.js  index.hbs
docs/zh/: book.toml
docs/zh/src/: README.md  SUMMARY.md  advanced.md  api.md  changelog.md  contributing.md  examples.md  getting-started.md
docs/zh/src/advanced/: custom-headers.md  thinking-mode.md  timeouts.md
docs/zh/src/api/: chat-completions.md  client.md  error-handling.md  streaming.md  tool-calling.md
docs/zh/src/examples/: basic-chat.md  multimodal.md  streaming-chat.md  streaming-completions.md  tool-calling.md
docs/zh/src/getting-started/: configuration.md  installation.md  quick-start.md
docs/zh/theme/: index.hbs
examples/: simple_streaming.rs  streaming_chat.rs  streaming_completions.rs
src/: chat.rs  client.rs  completions.rs  error.rs  lib.rs  types.rs
tests/: test_chat_http.rs  test_chat_request.rs  test_chat_response.rs  test_client_init.rs  test_completions_stream.rs  test_error.rs  test_legacy_completions.rs  test_multimodal.rs  test_stream_parse.rs  test_tool_definition.rs
tests/integration/: mock_server.rs  real_vllm.rs
