[package]
name = "vllm-client"
version = "0.1.0"
edition = "2021"
authors = ["limoncc"]
description = "A Rust client for vLLM OpenAI-compatible API"
documentation = "https://limoncc.github.io/vllm-client"
repository = "https://github.com/limoncc/vllm-client"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["ai", "client", "llm", "openai", "vllm", "chat", "streaming"]
categories = ["api-bindings", "web-programming::http-client", "asynchronous"]
exclude = ["/docs", "/tests", "/examples", ".github"]

[[test]]
name = "test_client_init"
path = "tests/test_client_init.rs"

[[test]]
name = "test_error"
path = "tests/test_error.rs"

[[test]]
name = "test_chat_request"
path = "tests/test_chat_request.rs"

[[test]]
name = "test_chat_response"
path = "tests/test_chat_response.rs"

[[test]]
name = "test_legacy_completions"
path = "tests/test_legacy_completions.rs"

[[test]]
name = "real_vllm"
path = "tests/integration/real_vllm.rs"

[[test]]
name = "test_stream_parse"
path = "tests/test_stream_parse.rs"

[[test]]
name = "test_tool_definition"
path = "tests/test_tool_definition.rs"

[[test]]
name = "test_chat_http"
path = "tests/test_chat_http.rs"

[[test]]
name = "test_multimodal"
path = "tests/test_multimodal.rs"

[[test]]
name = "mock_server"
path = "tests/integration/mock_server.rs"

[dependencies]
# HTTP client
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
  "stream"
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

async-stream = "0.3"
futures = "0.3"
# Async runtime
tokio = { version = "1.0", features = ["rt", "sync"] }
tokio-stream = "0.1"

# Utilities
bytes = "1.0"
pin-project-lite = "0.2"
thiserror = "2.0"

[dev-dependencies]
mockito = "1.4"  # HTTP mock server for testing (不需要 nightly Rust)
pretty_assertions = "1.4"
# Testing
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time"] }

[features]
default = []

[lsp]
document-link.enabled = false
